--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       <h5>Hi, I'm <span class="name">Muhammad Naufal Hawari Nor</span>, 
         a lifetime learner and mathematics student based in Surabaya, Indonesia.</h5>
       <div class="social-link">
-        <a href="#"><i class='bx bxl-linkedin-square'></i></a>
-        <a href="#"><i class='bx bxl-github'></i></a>
-        <a href="#"><i class='bx bxl-instagram'></i></a>
+        <a href="https://www.linkedin.com/in/naufalhawarinor/" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
+        <a href="https://github.com/NHawari" target="_blank"><i class='bx bxl-github'></i></a>
+        <a href="https://www.instagram.com/hawari____" target="_blank"><i class='bx bxl-instagram'></i></a>
       </div>
     </div>
   </section>
@@ -369,9 +369,9 @@
         class="email">naufalhawari7@gmail.com</a></span>, connect with me on 
         LinkedIn, GitHub, and Instagram, or use this form.</h4>
     <div class="social-link">
-      <a href="#"><i class='bx bxl-linkedin-square'></i></a>
-      <a href="#"><i class='bx bxl-github'></i></a>
-      <a href="#"><i class='bx bxl-instagram'></i></a>
+      <a href="https://www.linkedin.com/in/naufalhawarinor/" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
+      <a href="https://github.com/NHawari" target="_blank"><i class='bx bxl-github'></i></a>
+      <a href="https://www.instagram.com/hawari____" target="_blank"><i class='bx bxl-instagram'></i></a>
     </div>
     <form action="https://api.web3forms.com/submit" method="post" class="form fade-in">
       <div class="input-group">
