--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="ed-and-ex">
         <div class="ed-and-container">
             <div class="ed-and-ex-box">
-                <img src="assets/img/Logo-its-biru-transparan.png" alt="">
+                <img src="assets/img/its-logo.png" alt="">
                 <div class="university-text">
                     <h5>Institut Teknologi Sepuluh Nopember</h5>
                     <h6>Bachelor's Degree</h6>
@@ -106,7 +106,7 @@
                 </div>
             </div>
             <div class="ed-and-ex-box">
-                <img src="assets/img/logo-man-2-kudus-matsansaga (1).png" alt="">
+                <img src="assets/img/man-logo.png" alt="">
                 <div class="university-text">
                     <h5>MA Negeri 2 Kudus</h5>
                     <h6>High School</h6>
@@ -115,7 +115,7 @@
                 </div>
             </div>
             <div class="ed-and-ex-box">
-                <img src="assets/img/Logo-RevoU-5_1.original.png" alt="">
+                <img src="assets/img/revou-logo.png" alt="">
                 <div class="university-text">
                     <h5>RevoU Tech Academy</h5>
                     <p>Data Analytics and Software Engineering</p>
@@ -123,7 +123,7 @@
                 </div>
             </div>
             <div class="ed-and-ex-box">
-                <img src="assets/img/Logo-its-biru-transparan.png" alt="">
+                <img src="assets/img/its-logo.png" alt="">
                 <div class="university-text">
                     <h5>Institut Teknologi Sepuluh Nopember</h5>
                     <h6>Bachelor's Degree</h6>
@@ -132,7 +132,7 @@
                 </div>
             </div>
             <div class="ed-and-ex-box">
-                <img src="assets/img/logo-man-2-kudus-matsansaga (1).png" alt="">
+                <img src="assets/img/man-logo.png" alt="">
                 <div class="university-text">
                     <h5>MA Negeri 2 Kudus</h5>
                     <h6>High School</h6>
@@ -141,40 +141,27 @@
                 </div>
             </div>
             <div class="ed-and-ex-box">
-                <img src="assets/img/Logo-RevoU-5_1.original.png" alt="">
+                <img src="assets/img/revou-logo.png" alt="">
                 <div class="university-text">
                     <h5>RevoU Tech Academy</h5>
                     <p>Data Analytics and Software Engineering</p>
                     <p>Feb 2024 - Jun 2024</p>
                 </div>
             </div>
-            <div class="ed-and-ex-box">
-              <img src="assets/img/Logo-its-biru-transparan.png" alt="">
-              <div class="university-text">
-                  <h5>Institut Teknologi Sepuluh Nopember</h5>
-                  <h6>Bachelor's Degree</h6>
-                  <p>Mathematics and Computer Science</p>
-                  <p>2020 - Present</p>
-              </div>
-          </div>
-          <div class="ed-and-ex-box">
-              <img src="assets/img/logo-man-2-kudus-matsansaga (1).png" alt="">
-              <div class="university-text">
-                  <h5>MA Negeri 2 Kudus</h5>
-                  <h6>High School</h6>
-                  <p>Mathematics and Natural Science</p>
-                  <p>2017 - 2020</p>
-              </div>
-          </div>
-          <div class="ed-and-ex-box">
-              <img src="assets/img/Logo-RevoU-5_1.original.png" alt="">
-              <div class="university-text">
-                  <h5>RevoU Tech Academy</h5>
-                  <p>Data Analytics and Software Engineering</p>
-                  <p>Feb 2024 - Jun 2024</p>
-              </div>
-          </div>
         </div>
+    </div>
+    <div class="certified">
+      <div class="data-camp">
+        <h4>Certified as a</h4>
+        <h4>Data Scientist Associate</h4>
+        <div class="logo-certified">
+          <p>By</p>
+          <img src="assets/img/data-camp-logo.png" alt="">
+        </div>
+      </div>
+      <a href="https://www.datacamp.com/certificate/DSA0016783762324">
+        <img src="assets/img/DS Associate - badge with outline.png" alt="Description of Image">
+      </a>
     </div>
   </section>
 
