--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
     <div class="ed-and-ex">
         <div class="ed-and-container">
-            <div class="ed-and-ex-box">
+            <div class="ed-and-ex-box fade-in">
                 <img src="assets/img/its-logo.png" alt="">
                 <div class="university-text">
                     <h5>Institut Teknologi Sepuluh Nopember</h5>
@@ -151,7 +151,7 @@
         </div>
     </div>
     <div class="certified">
-      <div class="data-camp">
+      <div class="data-camp fade-in-bottom">
         <h4>Certified as a</h4>
         <h4>Data Scientist Associate</h4>
         <div class="logo-certified">
