--- a/index.html
+++ b/index.html
@@ -150,18 +150,70 @@
             </div>
         </div>
     </div>
-    <div class="certified fade-in-bottom">
-      <div class="data-camp">
-        <h4>Certified as a</h4>
-        <h4>Data Scientist Associate</h4>
-        <div class="logo-certified">
-          <p>By</p>
-          <img src="assets/img/data-camp-logo.png" alt="">
+    <div class="certified-container fade-in-bottom">
+      <div class="certified">
+        <a href="https://www.datacamp.com/certificate/DSA0016783762324">
+          <img src="assets/img/DS Associate - badge with outline.png" alt="Description of Image">
+        </a>
+        <div class="data-camp">
+          <h4>Certified as a Data Scientist Associate</h4>
+          <div class="logo-certified">
+            <p>By</p>
+            <img src="assets/img/data-camp-logo.png" alt="">
+          </div>
         </div>
       </div>
-      <a href="https://www.datacamp.com/certificate/DSA0016783762324">
-        <img src="assets/img/DS Associate - badge with outline.png" alt="Description of Image">
-      </a>
+    </div>
+    
+    <div class="certified-container fade-in-bottom">
+      <div class="certified next d-l">
+        <a href="https://www.datacamp.com/skill-verification/DL0039306440279">
+          <img src="assets/img/Data_Literacy_-_badge_with_outline.png" alt="Description of Image">
+        </a>
+        <div class="data-camp d-l">
+          <h4>Certified in Data Literacy</h4>
+          <div class="logo-certified">
+            <p>By</p>
+            <img src="assets/img/data-camp-logo.png" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="certified next">
+        <a href="https://www.credly.com/badges/68e65fbe-df72-436b-8036-3b6be1ee630b">
+          <img src="assets/img/data-fundamentals.png" alt="Description of Image">
+        </a>
+        <div class="sub-certified">
+          <h4>Certified in Data Fundamentals</h4>
+          <div class="logo-certified">
+            <p>By</p>
+            <img src="assets/img/ibm-logo-removebg-preview.png" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="certified next">
+        <a href="https://www.credly.com/badges/62bfb4e7-705d-4461-82ac-dff0c646c86a/public_url">
+          <img src="assets/img/data-science-foundations-level-2-v2.png" alt="Description of Image">
+        </a>
+        <div class="sub-certified">
+          <h4>Certified in Data Science Foundations</h4>
+          <div class="logo-certified">
+            <p>By</p>
+            <img src="assets/img/ibm-logo-removebg-preview.png" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="certified next">
+        <a href="https://courses.yl-ptech.skillsnetwork.site/certificates/057b250445fc4548ad8e0431f62fc653">
+          <img src="assets/img/python-for-data-science.png" alt="Description of Image">
+        </a>
+        <div class="sub-certified">
+          <h4>Certified in Python for Data Science</h4>
+          <div class="logo-certified">
+            <p>By</p>
+            <img src="assets/img/ibm-logo-removebg-preview.png" alt="">
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -183,32 +235,6 @@
       <span class="page-link next" data-page="next">Next<i class='bx bx-chevron-right'></i></span>
     </div>  
     <div class="project-container fade-in-bottom">
-      <div class="project-box">
-        <div class="photo-project project1">
-          <img src="assets/img/portfolio/vms-1.png" class="mySlides w3-animate-right" alt=""><!--
-          <img src="assets/img/portfolio/vms-2.png" class="mySlides w3-animate-right" alt="">
-          <img src="assets/img/portfolio/vms-3.png" class="mySlides w3-animate-right" alt="">-->
-        </div>
-        <h4>Vending Machine Sales Data Analysis and Software Engineering</h4>
-        <div class="tools">
-          <h6>Google BigQuery</h6>
-          <h6>Looker Studio</h6>
-          <h6>HTML</h6>
-          <h6>CSS</h6>
-          <h6>JavaScript</h6>
-          <h6>Chart.js</h6>
-        </div>
-        <p>
-          This project involves a comprehensive data analytics process, focusing on vending 
-          machine sales data from four distinct locations in Central New Jersey, USA, covering 
-          the period from January 1 to December 31, 2022. The project progresses through dataset 
-          preparation, data cleaning, in-depth analysis, and visualization, culminating in the 
-          creation of a final dashboard website. The analysis aims to address specific business 
-          problems derived from the sales data, providing actionable insights for optimizing 
-          vending machine operations.
-        </p>
-      </div>
-
       <div class="project-box">
         <div class="photo-project project7">
           <img src="assets/img/portfolio/TF1.png" class="mySlides w3-animate-right" alt=""><!--
@@ -276,6 +302,32 @@
           This repository contains a comprehensive analysis of power consumption data for the 
           city of Delhi, India. The analysis involves data preprocessing, time series decomposition, 
           and modeling using ARIMA and SARIMA models.
+        </p>
+      </div>
+
+      <div class="project-box">
+        <div class="photo-project project1">
+          <img src="assets/img/portfolio/vms-1.png" class="mySlides w3-animate-right" alt=""><!--
+          <img src="assets/img/portfolio/vms-2.png" class="mySlides w3-animate-right" alt="">
+          <img src="assets/img/portfolio/vms-3.png" class="mySlides w3-animate-right" alt="">-->
+        </div>
+        <h4>Vending Machine Sales Data Analysis and Software Engineering</h4>
+        <div class="tools">
+          <h6>Google BigQuery</h6>
+          <h6>Looker Studio</h6>
+          <h6>HTML</h6>
+          <h6>CSS</h6>
+          <h6>JavaScript</h6>
+          <h6>Chart.js</h6>
+        </div>
+        <p>
+          This project involves a comprehensive data analytics process, focusing on vending 
+          machine sales data from four distinct locations in Central New Jersey, USA, covering 
+          the period from January 1 to December 31, 2022. The project progresses through dataset 
+          preparation, data cleaning, in-depth analysis, and visualization, culminating in the 
+          creation of a final dashboard website. The analysis aims to address specific business 
+          problems derived from the sales data, providing actionable insights for optimizing 
+          vending machine operations.
         </p>
       </div>
       
