--- a/index.html
+++ b/index.html
@@ -53,14 +53,11 @@
   <section id="about" class="about">
     <h2 class="fade-in-bottom">About <span>Me</span></h2>
     <div class="about-me fade-in-bottom">
-        <p>Final-year Mathematics student at Institut Teknologi Sepuluh Nopember with 
-            a strong passion for data science and machine learning. Actively seeking 
-            opportunities to apply analytical skills and data-driven decision-making 
-            in a dynamic professional environment. Committed to enhancing teamwork 
-            abilities, with strong communication skills and a keen attention to detail. 
-            A quick learner who is always ready to embrace new challenges and acquire 
-            new knowledge. Driven by a passion for continuous learning and innovation, 
-            eager to contribute to organizational success, and engage in real-world projects.
+        <p>Fresh Graduate from Institut Teknologi Sepuluh Nopember majoring in Mathematics, 
+          with a keen interest in Data Science and Machine Learning. Highly motivated to apply 
+          analytical and data-driven decision-making skills in a dynamic professional environment. 
+          Fast learner with a passion for continuous learning, growing, and contributing to a 
+          dynamic and forward-thinking team in the industry.
         </p>
         <img src="assets/img/photo-haw.png" alt="">
     </div>
