--- a/index.html
+++ b/index.html
@@ -53,11 +53,10 @@
   <section id="about" class="about">
     <h2 class="fade-in-bottom">About <span>Me</span></h2>
     <div class="about-me fade-in-bottom">
-        <p>Fresh Graduate from Institut Teknologi Sepuluh Nopember majoring in Mathematics, 
-          with a keen interest in Data Science and Machine Learning. Highly motivated to apply 
-          analytical and data-driven decision-making skills in a dynamic professional environment. 
-          Fast learner with a passion for continuous learning, growing, and contributing to a 
-          dynamic and forward-thinking team in the industry.
+        <p>Fresh Graduate from Institut Teknologi Sepuluh Nopember in Mathematics, certified as a Data Scientist Associate, with additional
+certifications and independent study experience that strengthen my expertise in data science and machine learning. Highly motivated to
+apply analytical and data-driven decision-making skills in a dynamic professional environment. Fast learner with a passion for continuous
+learning, growing, and contributing to a dynamic and forward-thinking team in the industry.
         </p>
         <img src="assets/img/photo-haw.png" alt="">
     </div>
