--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@ learning, growing, and contributing to a dynamic and forward-thinking team in th
   <section class="portfolio" id="portfolio">
     <h2>My Project</h2>
     <h5>These projects highlight my expertise across multiple domains, 
-      including data analytics, machine learning, and web development</h5>
+      including data analytics, machine learning, and web development. 
+      To check out the code, feel free to visit my <span><a href="https://github.com/NHawari/Collage-Project" 
+        class="email">github/a></span>
     <div class="pagination">
       <span class="page-link prev" data-page="prev"><i class='bx bx-chevron-left'></i>Prev</span>
       <div class="page-numbers">
