--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ learning, growing, and contributing to a dynamic and forward-thinking team in th
     <h5>These projects highlight my expertise across multiple domains, 
       including data analytics, machine learning, and web development. 
       To check out the code, feel free to visit my <span><a href="https://github.com/NHawari/Collage-Project" 
-        class="email">github/a></span></h5>
+        class="email">github</a></span></h5>
     <div class="pagination">
       <span class="page-link prev" data-page="prev"><i class='bx bx-chevron-left'></i>Prev</span>
       <div class="page-numbers">
