--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       <img src="assets/img/photo-haw3.jpeg" alt="">
     </div>
     <div class="text-home fade-in">
-      <h2>Lifetime learner, mathematics student, and 
+      <h2>Lifetime learner, mathematics graduate, and 
         <span class="typing-container">
           <span id="text"></span><span class="cursor"></span>
         </span>
       </h2>
       <h5>Hi, I'm <span class="name">Muhammad Naufal Hawari Nor</span>, 
-        a lifetime learner and mathematics student based in Surabaya, Indonesia.</h5>
+        a lifetime learner and mathematics graduate based in Jepara, Indonesia.</h5>
       <div class="social-link">
         <a href="https://www.linkedin.com/in/naufalhawarinor/" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
         <a href="https://github.com/NHawari" target="_blank"><i class='bx bxl-github'></i></a>
@@ -56,7 +56,7 @@
         <p>Fresh Graduate from Institut Teknologi Sepuluh Nopember in Mathematics, certified as a Data Scientist Associate, with additional
 certifications and independent study experience that strengthen my expertise in data science and machine learning. Highly motivated to
 apply analytical and data-driven decision-making skills in a dynamic professional environment. Fast learner with a passion for continuous
-learning, growing, and contributing to a dynamic and forward-thinking team in the industry.
+learning, growing, and contributing to a forward-thinking team in the industry.
         </p>
         <img src="assets/img/photo-haw.png" alt="">
     </div>
