--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h5>Hi, I'm <span class="name">Muhammad Naufal Hawari Nor</span>, 
         a lifetime learner and mathematics graduate based in Jepara, Indonesia.</h5>
       <div class="social-link">
-        <a href="https://www.linkedin.com/in/naufalhawarinor/" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
+        <a href="https://www.linkedin.com/in/nhawari/" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
         <a href="https://github.com/NHawari" target="_blank"><i class='bx bxl-github'></i></a>
         <a href="https://www.instagram.com/hawari____" target="_blank"><i class='bx bxl-instagram'></i></a>
       </div>
@@ -406,7 +406,7 @@ learning, growing, and contributing to a forward-thinking team in the industry.
         class="email">naufalhawari7@gmail.com</a></span>, connect with me on 
         LinkedIn, GitHub, and Instagram, or use this form.</h4>
     <div class="social-link">
-      <a href="https://www.linkedin.com/in/naufalhawarinor/" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
+      <a href="https://www.linkedin.com/in/nhawari/" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
       <a href="https://github.com/NHawari" target="_blank"><i class='bx bxl-github'></i></a>
       <a href="https://www.instagram.com/hawari____" target="_blank"><i class='bx bxl-instagram'></i></a>
     </div>
