--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <span id="text"></span><span class="cursor"></span>
         </span>
       </h2>
-      <h5>Hi, I'm <span class="name">Muhammad Naufal Hawari Nor</span>, 
+      <h5>Hi, I'm <span class="name">Naufal Hawari</span>, 
         a lifetime learner and mathematics graduate based in Jepara, Indonesia.</h5>
       <div class="social-link">
         <a href="https://www.linkedin.com/in/nhawari/" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
@@ -53,10 +53,12 @@
   <section id="about" class="about">
     <h2 class="fade-in-bottom">About <span>Me</span></h2>
     <div class="about-me fade-in-bottom">
-        <p>Fresh Graduate from Institut Teknologi Sepuluh Nopember in Mathematics, certified as a Data Scientist Associate, with additional
-certifications and independent study experience that strengthen my expertise in data science and machine learning. Highly motivated to
-apply analytical and data-driven decision-making skills in a dynamic professional environment. Fast learner with a passion for continuous
-learning, growing, and contributing to a forward-thinking team in the industry.
+        <p>Hello World! Just like the first line of programming code, Hawari is kicking off his career 
+          journey in data-driven and AI solutions. As a fresh Mathematics graduate, he loves diving 
+          into data, building models to maximize its value, and uncovering insights that lead to 
+          smarter decisions. For him, it’s all about learning, learning, and learning—until 
+          he gets fully hands-on, deep in the game, and becomes the MVP in solving real-world problems 
+          across multiple industries!
         </p>
         <img src="assets/img/photo-haw.png" alt="">
     </div>
