--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
 
-  <link rel="icon" href="/assets/img/Art.png" type="image/png">
+  <link rel="icon" href="/assets/img/Icon.png" type="image/png">
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
