--- a/index.html
+++ b/index.html
@@ -167,6 +167,18 @@
     
     <div class="certified-container fade-in-bottom">
       <div class="certified next d-l">
+        <a href="https://www.datacamp.com/certificate/DSA0016783762324">
+          <img src="assets/img/DS Associate - badge with outline.png" alt="Description of Image">
+        </a>
+        <div class="data-camp">
+          <h4>Certified as a Data Scientist Associate</h4>
+          <div class="logo-certified">
+            <p>By</p>
+            <img src="assets/img/data-camp-logo.png" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="certified next">
         <a href="https://www.datacamp.com/skill-verification/DL0039306440279">
           <img src="assets/img/Data_Literacy_-_badge_with_outline.png" alt="Description of Image">
         </a>
