--- a/index.html
+++ b/index.html
@@ -150,27 +150,13 @@
             </div>
         </div>
     </div>
-    <div class="certified-container fade-in-bottom">
-      <div class="certified">
-        <a href="https://www.datacamp.com/certificate/DSA0016783762324">
-          <img src="assets/img/DS Associate - badge with outline.png" alt="Description of Image">
-        </a>
-        <div class="data-camp">
-          <h4>Certified as a Data Scientist Associate</h4>
-          <div class="logo-certified">
-            <p>By</p>
-            <img src="assets/img/data-camp-logo.png" alt="">
-          </div>
-        </div>
-      </div>
-    </div>
     
     <div class="certified-container fade-in-bottom">
       <div class="certified next d-l">
         <a href="https://www.datacamp.com/certificate/DSA0016783762324">
           <img src="assets/img/DS Associate - badge with outline.png" alt="Description of Image">
         </a>
-        <div class="data-camp">
+        <div class="data-camp d-l">
           <h4>Certified as a Data Scientist Associate</h4>
           <div class="logo-certified">
             <p>By</p>
@@ -178,7 +164,7 @@
           </div>
         </div>
       </div>
-      <div class="certified next">
+      <div class="certified next d-l">
         <a href="https://www.datacamp.com/skill-verification/DL0039306440279">
           <img src="assets/img/Data_Literacy_-_badge_with_outline.png" alt="Description of Image">
         </a>
